Add Integration Tests - Missing Db Disposing

--- a/ContosoUniversityApi/ContosoUniversityApi.csproj
+++ b/ContosoUniversityApi/ContosoUniversityApi.csproj
@@ -23,4 +23,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="ContosoUniversityApi.IntegrationTests" />
+  </ItemGroup>
 </Project>
